--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/.netlify
 /.pnp
 .pnp.js
 
@@ -24,3 +25,4 @@ yarn-error.log*
 
 # Local Netlify folder
 .netlify
+.netlify.toml
